--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "eframe_template"
+name = "login-app-rs"
 version = "0.1.0"
-authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
+authors = ["Lixfeld"]
 edition = "2021"
 rust-version = "1.65"
 
