--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ rust-version = "1.65"
 
 
 [dependencies]
+regex = "1.8.1"
+
 egui = "0.21.0"
 eframe = { version = "0.21.0", default-features = false, features = [
     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
